# SOPES1_Rust_P1

./: .env  Cargo.toml  Dockerfile  cloudbuild.yaml  docker-compose.yml
.github/workflows/: rust.yml
database/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--9043904967819878544.wt  collection-0-553406914201758641.wt  collection-2--9043904967819878544.wt  collection-4--9043904967819878544.wt  collection-7--9043904967819878544.wt  index-1--9043904967819878544.wt  index-1-553406914201758641.wt  index-3--9043904967819878544.wt  index-5--9043904967819878544.wt  index-6--9043904967819878544.wt  index-8--9043904967819878544.wt  index-9--9043904967819878544.wt  sizeStorer.wt
database/diagnostic.data/: metrics.2022-03-29T00-12-20Z-00000  metrics.2022-03-29T00-12-43Z-00000  metrics.2022-03-29T14-40-12Z-00000  metrics.2022-03-29T19-26-17Z-00000  metrics.2022-03-30T01-16-24Z-00000  metrics.2022-03-30T16-12-33Z-00000
src/: main.rs  main_ant.rs
