[package]
name = "api"
version = "0.1.0"
authors = ["AlexLeo99 <baker-plan-b@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["sync"]

[dependencies]
actix-web = "4"
actix-rt = "1"
bson = "0.14.0"
serde = "1.0.136"
futures = "0.3.4"
env_logger = "0.7"
dotenv = "0.15.0"
actix-cors = "0.6.1"
serde_json = "1.0"